<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="161dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/todo"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="84dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtEmptyRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/emptyRoom"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>