<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <ImageView
        android:id="@+id/imageViewBooking"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBooking">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/name"
            android:textColor="@color/pink"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/price"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/address"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="171dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/datein"
            android:layout_width="99dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/datein"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateout"
            android:layout_width="99dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/dateout"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datein" />

        <EditText
            android:textAlignment="center"
            android:id="@+id/editDateIn"
            android:layout_width="254dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:editable="false"
            android:fontFamily="@font/quicksand_regular"
            app:layout_constraintStart_toEndOf="@+id/datein"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:textAlignment="center"
            android:id="@+id/editDateOut"
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/quicksand_regular"
            android:ems="10"
            android:editable="false"
            app:layout_constraintStart_toEndOf="@+id/dateout"
            app:layout_constraintTop_toBottomOf="@+id/editDateIn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>